...
       static let imageVerticalInset: CGFloat = 8
       static let horizontalInset: CGFloat = 16
       static let defaultHeight: CGFloat = 200
   }

    private enum Images {
        static let liked = "FilledHeart"
        static let notLiked = "Heart"
    }

final class ImagesListViewController: UIViewController {
    
    // MARK: - IBOutlets
    @IBOutlet private var tableView: UITableView!
...
