...
                                <connections>
                                    <action selector="didTapShareButton:" destination="pFL-Cu-dRe" eventType="touchUpInside" id="CWf-HV-X0y"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Trr-mg-x3V" userLabel="BackButton">
                                <rect key="frame" x="8" y="67" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="X3Y-uV-Sju"/>
                                    <constraint firstAttribute="height" constant="24" id="nJa-ad-8Vt"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="BackButton"/>
...
                                    <constraint firstAttribute="width" constant="60" id="1tr-N3-IAf"/>
                                    <constraint firstAttribute="height" constant="60" id="Fp3-am-s4L"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eP1-Ns-lua">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="KxV-Mb-w68"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
