...

    // MARK: - Lifecycle

    override func viewDidLoad() {
        super.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"

        presenter?.viewDidLoad()

        progressObservation = webView.observe(
            \.estimatedProgress,
            options: [.new]
...
